--- a/styles/Scoreboard.module.css
+++ b/styles/Scoreboard.module.css
@@ -1,35 +1,94 @@
 .container {
-    padding: 20px;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    height: 100vh;
-  }
-  
-  .teamScores {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .playersSection {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .column {
-    width: 45%;
-  }
-  
-  .playerList {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .playerList li {
-    padding: 10px;
-    background-color: #444;
-    margin: 5px 0;
-    border-radius: 5px;
-  }
-  
+  padding: 20px;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.teamScores {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.playersSection {
+  display: flex;
+  justify-content: space-around;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.column {
+  width: 45%;
+  max-height: 80vh;
+}
+
+.playerList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  max-height: 70vh;
+  overflow-y: auto;
+}
+
+.playerItem {
+  padding: 10px;
+  background-color: #444;
+  margin: 5px 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column; /* Stack player info and counter vertically */
+  justify-content: space-between;
+}
+
+.playerInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  font-weight: bold
+}
+
+.score {
+  margin-left: 10px;
+}
+
+.counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.counter button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 0 10px;
+}
+
+.counter span {
+  width: 30px;
+  text-align: center;
+}
+.resetButton {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.resetButton:hover {
+  background-color: #d32f2f;
+}
