--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -38,6 +38,9 @@
   .selected {
     background-color: #00aaff;
   }
+  .selected:hover {
+    background-color: #00aaff; /* Maintain selected color on hover */
+  }
   
   .confirmButton {
     margin-top: 20px;
@@ -49,7 +52,9 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+  .confirmButton:hover{
+    background-color: #007bff9d;
+  }
   .confirmButton:disabled {
     background-color: #555;
     cursor: not-allowed;
@@ -73,20 +78,30 @@
     border-radius: 10px;
     text-align: center;
     width: 90%;
-    max-width: 500px;
+    max-width: 500px;  
+    display: flex;
+    flex-direction: column;
   }
   
   .teamColumns {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
   }
   
   .teamColumn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 45%;
   }
   
   .teamColumn h4 {
+    font-size: 1.2em;
     color: white;
+    margin-bottom: 10px;
+    text-align: center;
   }
   
   .playersSection {
@@ -106,6 +121,12 @@
     text-align: center;
   }
   
+  .playerList label {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* Space between checkbox and player name */
+  }
+  
   .playerList {
     list-style: none;
     padding: 0;
@@ -114,6 +135,14 @@
     background-color: #444;
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  .playerList input[type="checkbox"] {
+    margin: 0;
+  }
+  .playerList li {
+    padding: 5px 0;
   }
   
   .cancelButton {
@@ -144,10 +173,34 @@
   }
   
   .teamButton:hover {
-    background-color: #555;
+    background-color: #555; 
   }
-  
   .selected {
     background-color: #00aaff;
   }
+  .selected:hover {
+    background-color: #00aaff; /* Maintain selected color on hover */
+  }
+  .resetWrapper {
+    display: fixed;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+    margin-top: 20px;
+
+  }
   
+  .resetButton {
+    padding: 10px 20px;
+    background-color: #ff4444;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px;
+    flex:1
+  }
+  
+  .resetButton:hover {
+    background-color: #d33;
+  }
