--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -132,7 +132,7 @@
     padding: 0;
     margin: 0;
     color: white;
-    background-color: #444;
+    background-color: rgba(125, 110, 95, 0.4);
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
